# tree-sitter-t32

./: .gitignore  .gitlab-ci.yml  .woodpecker.yml  .yarnrc.yml  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  MANIFEST.in  Makefile  Package.swift  README.md  REUSE.toml  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.reuse/: dep5
bindings/c/: tree-sitter-t32.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_t32/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/zig/: root.zig
queries/: highlights.scm  locals.scm  tags.scm
scripts/: update_version.sh
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: ambiguities.txt  comments.txt  control_flow.txt  expressions.txt  hll.txt  line_breaks.cmm
test/highlight/: comments.cmm  keywords.cmm  literals.cmm  var.cmm
