# SPDX-FileCopyrightText: 2022 Christoph Sax <c_sax@mailbox.org>
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>=43", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-t32"
description = "Lauterbach TRACE32® script language grammar for Tree-sitter"
version = "6.0.4"
keywords = [
  "lexer",
  "incremental",
  "parsing",
  "tree-sitter",
  "trace32",
  "t32",
  "lauterbach",
  "practice"
]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
authors = [
  {name = "Christoph Sax", email = "c_sax@mailbox.org"},
]
requires-python = ">=3.10"
license = "MIT AND BSD-2-Clause"
license-files = [
  "LICENSES/*",
]
readme = "README.md"

[project.urls]
Homepage = "https://codeberg.org/xasc/tree-sitter-t32"
Repository = "https://codeberg.org/xasc/tree-sitter-t32.git"
Issues = "https://codeberg.org/xasc/tree-sitter-t32/issues"
Changelog = "https://codeberg.org/xasc/tree-sitter-t32/src/branch/main/CHANGELOG.md"

[project.optional-dependencies]
core = ["tree-sitter~=0.25"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
test-requires = ["pytest", "tree-sitter@git+https://github.com/tree-sitter/py-tree-sitter@v0.25.0"]
test-command = "pytest {project}/bindings/python/tests"
